Added MDK/whitelist.cache exception to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,8 @@ _pkginfo.txt
 # Visual Studio cache files
 # files ending in .cache can be ignored
 *.[Cc]ache
+# but keep track of MKD-SE whitelist
+!*/MDK/whitelist.cache
 # but keep track of directories ending in .cache
 !*.[Cc]ache/
 
