--- a/SB22 Follow Drone/SB22 Follow Drone.csproj
+++ b/SB22 Follow Drone/SB22 Follow Drone.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D1C007DF-3994-4E19-B20C-6E77F57B7CA8}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>IngameScript</RootNamespace>
-    <AssemblyName>SB22_Follow_Drone</AssemblyName>
+    <AssemblyName>SB22 Follow Drone</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -50,6 +50,8 @@
     <AdditionalFiles Include="thumb.png" />
     <AdditionalFiles Include="MDK\whitelist.cache" />
   </ItemGroup>
+  <Import Project="..\SB22 Drone Library\SB22 Drone Library.projitems" Label="Shared" />
+  <Import Project="..\SB22 Script Helpers\SB22 Script Helpers.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <Copy SourceFiles="MDK\MDK.options.props" DestinationFolder="$(TargetDir)\MDK" />
